# pi4B_work

./: boot.sh  redme.txt
cam_sender/: sender.py
camre_capture_by_frame/: CMakeLists.txt  cam_cap.cpp  camboot.sh  dirname.sh
camre_capture_by_frame/sh/: boot.sh
camre_capture_by_frame/src/: SqQueue.cpp  cam_cap.cpp  functions.cpp
img_diff/: CMakeLists.txt  img_diff.cpp
mjpg-streamer-master/mjpg-streamer-experimental/_build/: CMakeCache.txt  install_manifest.txt  mjpg_streamer
pandog/: watchall.sh  watchg.sh  watchp.sh
save_camre_to_video/: result_temp.avi  save_cam.cpp
